--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-ecommerce-with-fake-payment-gateway",
+  "homepage": "https://shantovai23.github.io/React-ecommerce-site-with-payment-gateway",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -21,6 +23,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+      "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
