--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-ecommerce-with-fake-payment-gateway",
-  "homepage": "https://shantovai23.github.io",
+  "homepage": "https://shantovai23.github.io/React-ecommerce-site-with-payment-gateway",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
